# vector-library

./: .dockerignore  .editorconfig  .env.example  .gitignore  Makefile  README.md  buildspec.yml  pyproject.toml  setup_mcp.sh
application/core/build_rag_index/: Dockerfile  builder.py  chunker.py  config.py  exceptions.py  handler.py  pdf_extractor.py
application/core/rag_search_api/: Dockerfile  config.py  handler.py  searcher.py
cloudformation/: create_stacks.sh  delete_stacks.sh  exec_change_sets.sh
cloudformation/templates/apigateway/: apigateway.yml  dev-oregon-parameters.json  prod-oregon-parameters.json
cloudformation/templates/codebuild/: codebuild.yml  dev-oregon-parameters.json  prod-oregon-parameters.json
cloudformation/templates/codepipeline/: codepipeline.yml  dev-oregon-parameters.json  prod-oregon-parameters.json
cloudformation/templates/ecr/: dev-oregon-parameters.json  ecr.yml  prod-oregon-parameters.json
cloudformation/templates/eventbridge/: dev-oregon-parameters.json  eventbridge.yml  prod-oregon-parameters.json
cloudformation/templates/iam-role/: dev-virginia-parameters.json  iam-role.yml  prod-virginia-parameters.json
cloudformation/templates/lambda/: dev-oregon-parameters.json  lambda.yml  prod-oregon-parameters.json
cloudformation/templates/s3/: s3.yml
mcp/: mcp_server.py
tests/: conftest.py
tests/unit/: test_builder.py  test_chunker.py  test_handler.py  test_pdf_extractor.py  test_searcher.py
